[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terge"
version = "0.1.0"
authors = [
  {name="Umar Butler", email="umar@umar.au"},
]
description = "An easy-to-use Python library for merging PyTorch models."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "pytorch",
    "torch",
    "merge",
    "merger",
    "merging",
    "model",
    "models",
    "artificial intelligence",
    "ai",
    "machine learning",
    "ml",
    "neural net",
    "neural nets",
    "neural network",
    "neural networks",
    "nn",
    "nns",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "torch",
]

[project.urls]
Homepage = "https://github.com/umarbutler/terge"
Documentation = "https://github.com/umarbutler/terge/blob/main/README.md"
Issues = "https://github.com/umarbutler/terge/issues"
Source = "https://github.com/umarbutler/terge"